# analyticon23

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.md  explore.ipynb  narrative.ipynb  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
data/: model.joblib
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/analyticon_fifa/: __init__.py  cli.py  data_loader.py  directories.py  merge_data.py  model.py
src/analyticon_fifa/model/: model.py
tests/: __init__.py  test_analyticon_fifa.py
