
[project]
name = "analyticon_fifa"
version = "0.1.0"
description = "Python package that generates all the outputs for Analyticon 2023."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["analyticon_fifa"]
authors = [{ name = "Manuel Martinez", email = "manmartgarc@gmail.com" }]
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Intended Audience :: Developers',
  'Natural Language :: English',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
]
dependencies = [
  "pandas",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "statsmodels"
]

[project.urls]
homepage = "https://github.com/manmartgarc/analyticon23"
repository = "https://github.com/manmartgarc/analyticon23"
changelog = "https://github.com/manmartgarc/analyticon23"

[project.optional-dependencies]
docs = ["myst-parser==0.18.0", "Sphinx==5.1.1", "sphinx-rtd-theme==1.0.0"]
dev = [
  "black",
  "build",
  "bump2version",
  "flake8",
  "mypy",
  "pylint",
  "pytest",
  "pytest-cov",
  "pytest-mock",
]

[project.scripts]
analyticon_fifa = "analyticon_fifa.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
license-files = ["LICENSE"]

[tools.setuptools.packages.find]
where = ["src"]
namespaces = false

[tools.setuptools.include-package-data]
analyticon_fifa = ["LICENSE", "README.md"]

[tools.setuptools.exclude-package-data]
analyticon_fifa = [".gitignore", "contrib", "docs", "test*"]

[tool.black]
line-length = 79

[tool.mypy]
packages = ["src"]
ignore_missing_imports = true


[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = [
  "--doctest-modules",
  "--cov-config=.coveragerc",
  "--cov=analyticon_fifa",
  "--cov-branch",
  "--cov-report=term-missing",
  "--cov-report=xml:coverage.xml",
  "--junitxml=coverage-junit.xml",
  "--durations=5",
]
